# Systems2Ex5A

./: CMakeLists.txt  Demo.cpp  README.md  Test.cpp  doctest.h
sources/: AscendingIterator.cpp  AscendingIterator.hpp  MagicalContainer.cpp  MagicalContainer.h  MagicalContainer.hpp  PrimeIterator.cpp  PrimeIterator.hpp  SideCrossIterator.cpp  SideCrossIterator.hpp
